[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = dk_manga_tools
description = Custom tools to work with SDSS MaNGA Data
long_description = Built on the sdss-marvin framework and uses astropy
author = Dhanesh (DK) Krishnarao
author_email = krishnarao@astro.wisc.edu
license = BSD 3-Clause
url = https://github.com/Deech08/dk_manga_tools
edit_on_github = False
github_project = astropy/astropy
# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, matplotlib, numpy, seaborn, sdss-marvin, extinction, speclite, flask==2.1.0, jinja2==3.1.2, marvin @ git+https://github.com/Deech08/marvin.git
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
# Note: you will also need to change this in your package's __init__.py
minimum_python_version = 3.6

[entry_points]

# astropy-package-template-example = packagename.example_mod:main

